# asm_studio

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/asmstudio/: asmstudio.hpp
include/asmstudio/analysis/: CfgDot.hpp  Explain.hpp
include/asmstudio/api/: Condition.hpp  Expr.hpp  Function.hpp  Program.hpp  Stmt.hpp  Variable.hpp
include/asmstudio/backend/: Arm64Emitter.hpp  PseudoEmitter.hpp
include/asmstudio/codegen/: Arm64Emitter.hpp  PseudoEmitter.hpp
include/asmstudio/core/: Compat.hpp  Diagnostic.hpp  SourceLocation.hpp  Types.hpp
include/asmstudio/driver/: ConsolePresenter.hpp
include/asmstudio/dsl/: Condition.hpp  Expr.hpp  Function.hpp  Program.hpp  Stmt.hpp  Variable.hpp
include/asmstudio/explain/: Explain.hpp
include/asmstudio/ir/: IRTypes.hpp  Lowering.hpp
include/asmstudio/lowering/: Lowering.hpp
include/asmstudio/optimizer/: Optimizer.hpp  PassBase.hpp
include/asmstudio/parse/: AsmParse.hpp  AsmProgram.hpp  Lexer.hpp  Parser.hpp  Token.hpp
include/asmstudio/parser/: AsmParse.hpp  AsmProgram.hpp  Lexer.hpp  Parser.hpp  Token.hpp
include/asmstudio/presentation/: ConsolePresenter.hpp
include/asmstudio/sim/: SimState.hpp  Simulator.hpp
include/asmstudio/simulator/: SimState.hpp  Simulator.hpp
include/asmstudio/support/: Compat.hpp  Diagnostic.hpp  SourceLocation.hpp  Types.hpp
include/asmstudio/transforms/: Optimizer.hpp  PassBase.hpp
include/asmstudio/visualization/: CfgDot.hpp
src/: main.cpp
src/analysis/: CfgDot.cpp  Explain.cpp
src/api/: Function.cpp  Program.cpp  Variable.cpp
src/backend/: Arm64Emitter.cpp  PseudoEmitter.cpp
src/codegen/: Arm64Emitter.cpp  PseudoEmitter.cpp
src/core/: Diagnostic.cpp
src/driver/: ConsolePresenter.cpp
src/dsl/: Function.cpp  Program.cpp  Variable.cpp
src/explain/: Explain.cpp
src/ir/: Lowering.cpp
src/lowering/: Lowering.cpp
src/optimizer/: Optimizer.cpp
src/optimizer/passes/: ConstantFoldingPass.cpp  DeadCodeEliminationPass.cpp  JumpSimplificationPass.cpp  UnreachableBlockEliminationPass.cpp
src/presentation/: ConsolePresenter.cpp
src/sim/: Simulator.cpp
src/simulator/: Simulator.cpp
src/support/: Diagnostic.cpp
src/transforms/: Optimizer.cpp
src/transforms/passes/: ConstantFoldingPass.cpp  DeadCodeEliminationPass.cpp  JumpSimplificationPass.cpp  UnreachableBlockEliminationPass.cpp
src/visualization/: CfgDot.cpp
tests/analysis/: ToolingTest.cpp
tests/api/: ConditionTest.cpp  ExprStmtTest.cpp  ProgramApiTest.cpp
tests/core/: DiagnosticTest.cpp  TypesTest.cpp
tests/dsl/: ConditionTest.cpp  ExprStmtTest.cpp  ProgramApiTest.cpp
tests/ir/: IRTest.cpp
tests/optimizer/: OptimizerTest.cpp
tests/parse/: LexerTest.cpp  ParserTest.cpp
tests/parser/: LexerTest.cpp  ParserTest.cpp
tests/sim/: SimulatorTest.cpp
tests/simulator/: SimulatorTest.cpp
tests/support/: DiagnosticTest.cpp  TypesTest.cpp
tests/tooling/: ToolingTest.cpp
tests/transforms/: OptimizerTest.cpp
